--- a/paper_plots.ipynb
+++ b/paper_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import torch\n",
+    "import regex as re\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "from transformers import AutoModel, AutoTokenizer, logging\n",
     "from datasets import load_dataset\n",
     "from copy import deepcopy\n",
@@ -24,6 +26,289 @@
     "    outliers_idxs = [77, 588]\n",
     "elif model_name == \"bert-base-uncased\":\n",
     "    outliers_idxs = [308, 381]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>218</th>\n",
+       "      <th>674</th>\n",
+       "      <th>218_674</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.724300</td>\n",
+       "      <td>0.724911</td>\n",
+       "      <td>0.724707</td>\n",
+       "      <td>0.725624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.743760</td>\n",
+       "      <td>0.741212</td>\n",
+       "      <td>0.743556</td>\n",
+       "      <td>0.740703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.745390</td>\n",
+       "      <td>0.731635</td>\n",
+       "      <td>0.748242</td>\n",
+       "      <td>0.732247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.755986</td>\n",
+       "      <td>0.733877</td>\n",
+       "      <td>0.757208</td>\n",
+       "      <td>0.729903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.758940</td>\n",
+       "      <td>0.712073</td>\n",
+       "      <td>0.761895</td>\n",
+       "      <td>0.716658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.760876</td>\n",
+       "      <td>0.720530</td>\n",
+       "      <td>0.763321</td>\n",
+       "      <td>0.717168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.771472</td>\n",
+       "      <td>0.679878</td>\n",
+       "      <td>0.769638</td>\n",
+       "      <td>0.677127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.772491</td>\n",
+       "      <td>0.660621</td>\n",
+       "      <td>0.771676</td>\n",
+       "      <td>0.654305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.771880</td>\n",
+       "      <td>0.644218</td>\n",
+       "      <td>0.771778</td>\n",
+       "      <td>0.629750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.772185</td>\n",
+       "      <td>0.630464</td>\n",
+       "      <td>0.777483</td>\n",
+       "      <td>0.600102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.782068</td>\n",
+       "      <td>0.543658</td>\n",
+       "      <td>0.777993</td>\n",
+       "      <td>0.519205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.792359</td>\n",
+       "      <td>0.462557</td>\n",
+       "      <td>0.781559</td>\n",
+       "      <td>0.435558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.794396</td>\n",
+       "      <td>0.461335</td>\n",
+       "      <td>0.780642</td>\n",
+       "      <td>0.445644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.799287</td>\n",
+       "      <td>0.472848</td>\n",
+       "      <td>0.786347</td>\n",
+       "      <td>0.445339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.801426</td>\n",
+       "      <td>0.474885</td>\n",
+       "      <td>0.793683</td>\n",
+       "      <td>0.451554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.803057</td>\n",
+       "      <td>0.446154</td>\n",
+       "      <td>0.793581</td>\n",
+       "      <td>0.431381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.807947</td>\n",
+       "      <td>0.486602</td>\n",
+       "      <td>0.801121</td>\n",
+       "      <td>0.449312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.808355</td>\n",
+       "      <td>0.486195</td>\n",
+       "      <td>0.799083</td>\n",
+       "      <td>0.440448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.811513</td>\n",
+       "      <td>0.491391</td>\n",
+       "      <td>0.800306</td>\n",
+       "      <td>0.431279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.814060</td>\n",
+       "      <td>0.482323</td>\n",
+       "      <td>0.806113</td>\n",
+       "      <td>0.431584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.816403</td>\n",
+       "      <td>0.533571</td>\n",
+       "      <td>0.809985</td>\n",
+       "      <td>0.479470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.818543</td>\n",
+       "      <td>0.527967</td>\n",
+       "      <td>0.809985</td>\n",
+       "      <td>0.455629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.816505</td>\n",
+       "      <td>0.554152</td>\n",
+       "      <td>0.812736</td>\n",
+       "      <td>0.473153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.817830</td>\n",
+       "      <td>0.488538</td>\n",
+       "      <td>0.810188</td>\n",
+       "      <td>0.397351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.821294</td>\n",
+       "      <td>0.583800</td>\n",
+       "      <td>0.816302</td>\n",
+       "      <td>0.485278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.823230</td>\n",
+       "      <td>0.582781</td>\n",
+       "      <td>0.817117</td>\n",
+       "      <td>0.453082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.822618</td>\n",
+       "      <td>0.578808</td>\n",
+       "      <td>0.813449</td>\n",
+       "      <td>0.461029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0_12</th>\n",
+       "      <td>0.823026</td>\n",
+       "      <td>0.568823</td>\n",
+       "      <td>0.813856</td>\n",
+       "      <td>0.444422</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     218       674   218_674\n",
+       "0_12  0.724300  0.724911  0.724707  0.725624\n",
+       "0_12  0.743760  0.741212  0.743556  0.740703\n",
+       "0_12  0.745390  0.731635  0.748242  0.732247\n",
+       "0_12  0.755986  0.733877  0.757208  0.729903\n",
+       "0_12  0.758940  0.712073  0.761895  0.716658\n",
+       "0_12  0.760876  0.720530  0.763321  0.717168\n",
+       "0_12  0.771472  0.679878  0.769638  0.677127\n",
+       "0_12  0.772491  0.660621  0.771676  0.654305\n",
+       "0_12  0.771880  0.644218  0.771778  0.629750\n",
+       "0_12  0.772185  0.630464  0.777483  0.600102\n",
+       "0_12  0.782068  0.543658  0.777993  0.519205\n",
+       "0_12  0.792359  0.462557  0.781559  0.435558\n",
+       "0_12  0.794396  0.461335  0.780642  0.445644\n",
+       "0_12  0.799287  0.472848  0.786347  0.445339\n",
+       "0_12  0.801426  0.474885  0.793683  0.451554\n",
+       "0_12  0.803057  0.446154  0.793581  0.431381\n",
+       "0_12  0.807947  0.486602  0.801121  0.449312\n",
+       "0_12  0.808355  0.486195  0.799083  0.440448\n",
+       "0_12  0.811513  0.491391  0.800306  0.431279\n",
+       "0_12  0.814060  0.482323  0.806113  0.431584\n",
+       "0_12  0.816403  0.533571  0.809985  0.479470\n",
+       "0_12  0.818543  0.527967  0.809985  0.455629\n",
+       "0_12  0.816505  0.554152  0.812736  0.473153\n",
+       "0_12  0.817830  0.488538  0.810188  0.397351\n",
+       "0_12  0.821294  0.583800  0.816302  0.485278\n",
+       "0_12  0.823230  0.582781  0.817117  0.453082\n",
+       "0_12  0.822618  0.578808  0.813449  0.461029\n",
+       "0_12  0.823026  0.568823  0.813856  0.444422"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_path = Path(\"./output/baselines/evaled/mberts_1/checkpoints/\")\n",
+    "mberts_df = pd.DataFrame()\n",
+    "ckpts = sorted([i for i in output_path.iterdir()], key=lambda x: int(re.search(\"step_(\\d+)\", str(x)).group(1)))\n",
+    "for i in ckpts[1:]:\n",
+    "    with open(i.resolve() / \"NLI\" / \"ep_003_smpl_1M\" / \"hf\"/ \"layer_size_12_results.json\") as new_file_path:\n",
+    "        new_file = json.load(new_file_path)\n",
+    "    new_df = pd.DataFrame.from_dict(new_file).T.applymap(lambda x:x['eval_accuracy'])\n",
+    "    mberts_df = pd.concat([mberts_df, new_df])\n",
+    "mberts_df = mberts_df.rename({\"(218,)\": \"218\"}, axis=1).rename({\"(674,)\": \"674\"}, axis=1).rename({\"\": \"Full Model\"})\n",
+    "mberts_df"
    ]
   },
   {
