--- a/paper_plots.ipynb
+++ b/paper_plots.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nlp/anaconda3/envs/outliersvsfreq/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,36 +57,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cola</th>\n",
+       "      <th>rte</th>\n",
+       "      <th>stsb</th>\n",
+       "      <th>qqp</th>\n",
+       "      <th>mnli</th>\n",
+       "      <th>qnli</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>0.605713</td>\n",
+       "      <td>0.660650</td>\n",
+       "      <td>0.890413</td>\n",
+       "      <td>0.911254</td>\n",
+       "      <td>0.6365</td>\n",
+       "      <td>0.913601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(308,)</th>\n",
+       "      <td>0.512623</td>\n",
+       "      <td>0.599278</td>\n",
+       "      <td>0.496923</td>\n",
+       "      <td>0.896834</td>\n",
+       "      <td>0.4390</td>\n",
+       "      <td>0.895479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(381,)</th>\n",
+       "      <td>0.426761</td>\n",
+       "      <td>0.505415</td>\n",
+       "      <td>0.840809</td>\n",
+       "      <td>0.836384</td>\n",
+       "      <td>0.4265</td>\n",
+       "      <td>0.814754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308_381</th>\n",
+       "      <td>0.255590</td>\n",
+       "      <td>0.472924</td>\n",
+       "      <td>0.284458</td>\n",
+       "      <td>0.796463</td>\n",
+       "      <td>0.3690</td>\n",
+       "      <td>0.763683</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[                                                      0_12\n",
-       "          {'eval_loss': 0.8207402229309082, 'eval_accura...\n",
-       " (308,)   {'eval_loss': 1.0797898769378662, 'eval_accura...\n",
-       " (381,)   {'eval_loss': 1.1635327339172363, 'eval_accura...\n",
-       " 308_381  {'eval_loss': 1.2237548828125, 'eval_accuracy'...]"
+       "             cola       rte      stsb       qqp    mnli      qnli\n",
+       "         0.605713  0.660650  0.890413  0.911254  0.6365  0.913601\n",
+       "(308,)   0.512623  0.599278  0.496923  0.896834  0.4390  0.895479\n",
+       "(381,)   0.426761  0.505415  0.840809  0.836384  0.4265  0.814754\n",
+       "308_381  0.255590  0.472924  0.284458  0.796463  0.3690  0.763683"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def select_func(x):\n",
+    "    if \"eval_pearson\" in x:\n",
+    "        return x[\"eval_pearson\"]\n",
+    "    elif \"eval_matthews_correlation\" in x:\n",
+    "        return x[\"eval_matthews_correlation\"]\n",
+    "    elif \"eval_accuracy\" in x:\n",
+    "        return x[\"eval_accuracy\"]\n",
+    "    \n",
+    "    \n",
     "dfs = []\n",
+    "names = []\n",
     "for path in Path(\"./output/baselines/scores/bert-base-uncased/\").iterdir():\n",
-    "    with open(path.resolve() / \"n_layers_with_hidden_outliers_12_results_mnli.json\") as input_path:\n",
-    "        dfs.append(pd.DataFrame.from_dict(json.load(input_path))).applymap(lambda x: x[\"\"])\n",
-    "dfs.append(dfs[0])\n",
-    "pd.concat(df)"
+    "    with open(path / \"n_layers_with_hidden_outliers_12_results.json\") as input_path:\n",
+    "        dfs.append(pd.DataFrame.from_dict(json.load(input_path)).applymap(select_func).T)\n",
+    "        names.append(path.name)\n",
+    "# dfs.append(dfs[0])\n",
+    "glue_df = pd.concat(dfs)\n",
+    "glue_df.index = names\n",
+    "glue_df.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +228,7 @@
        "(<Figure size 360x360 with 1 Axes>, <AxesSubplot:>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +263,7 @@
        "(<Figure size 360x360 with 1 Axes>, <AxesSubplot:>)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -199,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +299,7 @@
        " array([<AxesSubplot:>, <AxesSubplot:>, <AxesSubplot:>], dtype=object))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -235,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +335,7 @@
        " array([<AxesSubplot:>, <AxesSubplot:>, <AxesSubplot:>], dtype=object))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +383,7 @@
     "elif model_name == \"roberta-base\":\n",
     "    col_order = [\"77\", \"588\", \"77, 588\", \"Full Model\"]\n",
     "\n",
-    "with open(f\"output/baselines/scores/{model_name}/mnli/n_layers_with_hidden_outliers_1_results_mnli.json\") as nli_file:\n",
+    "with open(f\"output/baselines/scores/{model_name}/mnli/n_layers_with_hidden_outliers_1_results.json\") as nli_file:\n",
     "    nli_scores = json.load(nli_file)\n",
     "with open(f\"output/mlm_loss/{model_name}/results_by_layer.json\") as mlm_file:\n",
     "    mlm_loss = json.load(mlm_file)\n",
@@ -315,18 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Reusing dataset glue (/home/nlp/.cache/huggingface/datasets/glue/mnli/1.0.0/dacbe3125aa31d7f70367a07a8a9e72a5a0bfeb5fc42e75c9db75b96da6053ad)\n",
-      "100%|██████████| 5/5 [00:00<00:00, 1153.93it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 575.10it/s]\n"
      ]
     },
     {
