add vit experiment

--- a/paper_plots.ipynb
+++ b/paper_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +163,81 @@
     "glue_df = pd.concat(dfs)\n",
     "glue_df.index = names\n",
     "glue_df.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'759': 0.9802,\n",
+       "  '512': 0.9778,\n",
+       "  '382': 0.9786,\n",
+       "  '637': 0.9802,\n",
+       "  '187': 0.9793,\n",
+       "  '678': 0.9794,\n",
+       "  '759_512': 0.977,\n",
+       "  '759_382': 0.9778,\n",
+       "  '759_637': 0.9788,\n",
+       "  '759_187': 0.9765,\n",
+       "  '759_678': 0.9777,\n",
+       "  '512_382': 0.9751,\n",
+       "  '512_637': 0.975,\n",
+       "  '512_187': 0.9739,\n",
+       "  '512_678': 0.977,\n",
+       "  '382_637': 0.9763,\n",
+       "  '382_187': 0.9764,\n",
+       "  '382_678': 0.9744,\n",
+       "  '637_187': 0.9779,\n",
+       "  '637_678': 0.9768,\n",
+       "  '187_678': 0.9774,\n",
+       "  '': 0.9806,\n",
+       "  '759_512_382_637_187_678': 0.9447,\n",
+       "  'random_len_1': 0.98102,\n",
+       "  'random_len_2': 0.9804,\n",
+       "  'random_len_3': 0.9806800000000001,\n",
+       "  'random_len_4': 0.98026,\n",
+       "  'random_len_5': 0.98074,\n",
+       "  'random_len_6': 0.9803799999999999}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "future_table = []\n",
+    "idxs = ['168', '759', 'random_len_1', ]\n",
+    "for i in ['cifar10']:\n",
+    "    cifar_path = Path(f\"output/vit/{i}\")\n",
+    "    cifar_result = list(cifar_path.iterdir())[-1]\n",
+    "    with open(cifar_result / \"eval_output.json\") as input_file:\n",
+    "        future_table.append(json.load(input_file))\n",
+    "{future_table}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('output/vit/cifar10/trainer_output_nepochs_5_2022-06-24 17:21:16.265822')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(Path(\"./output/vit/cifar10/\").iterdir())[-1]"
    ]
   },
   {
