--- a/paper_plots.ipynb
+++ b/paper_plots.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,90 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cola</th>\n",
-       "      <th>rte</th>\n",
-       "      <th>stsb</th>\n",
-       "      <th>qqp</th>\n",
-       "      <th>mnli</th>\n",
-       "      <th>qnli</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>0.605713</td>\n",
-       "      <td>0.660650</td>\n",
-       "      <td>0.890413</td>\n",
-       "      <td>0.911254</td>\n",
-       "      <td>0.6365</td>\n",
-       "      <td>0.913601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(308,)</th>\n",
-       "      <td>0.512623</td>\n",
-       "      <td>0.599278</td>\n",
-       "      <td>0.496923</td>\n",
-       "      <td>0.896834</td>\n",
-       "      <td>0.4390</td>\n",
-       "      <td>0.895479</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(381,)</th>\n",
-       "      <td>0.426761</td>\n",
-       "      <td>0.505415</td>\n",
-       "      <td>0.840809</td>\n",
-       "      <td>0.836384</td>\n",
-       "      <td>0.4265</td>\n",
-       "      <td>0.814754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>308_381</th>\n",
-       "      <td>0.255590</td>\n",
-       "      <td>0.472924</td>\n",
-       "      <td>0.284458</td>\n",
-       "      <td>0.796463</td>\n",
-       "      <td>0.3690</td>\n",
-       "      <td>0.763683</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             cola       rte      stsb       qqp    mnli      qnli\n",
-       "         0.605713  0.660650  0.890413  0.911254  0.6365  0.913601\n",
-       "(308,)   0.512623  0.599278  0.496923  0.896834  0.4390  0.895479\n",
-       "(381,)   0.426761  0.505415  0.840809  0.836384  0.4265  0.814754\n",
-       "308_381  0.255590  0.472924  0.284458  0.796463  0.3690  0.763683"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'output/baselines/scores/bert-base-uncased'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/nlp/Repos/outliersvsfreq/paper_plots.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsl250.m.gsic.titech.ac.jp/home/nlp/Repos/outliersvsfreq/paper_plots.ipynb#ch0000002vscode-remote?line=9'>10</a>\u001b[0m dfs \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsl250.m.gsic.titech.ac.jp/home/nlp/Repos/outliersvsfreq/paper_plots.ipynb#ch0000002vscode-remote?line=10'>11</a>\u001b[0m names \u001b[39m=\u001b[39m []\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bsl250.m.gsic.titech.ac.jp/home/nlp/Repos/outliersvsfreq/paper_plots.ipynb#ch0000002vscode-remote?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m path \u001b[39min\u001b[39;00m Path(\u001b[39m\"\u001b[39m\u001b[39m./output/baselines/scores/bert-base-uncased/\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39miterdir():\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsl250.m.gsic.titech.ac.jp/home/nlp/Repos/outliersvsfreq/paper_plots.ipynb#ch0000002vscode-remote?line=12'>13</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path \u001b[39m/\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mn_layers_with_hidden_outliers_12_results.json\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m input_path:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsl250.m.gsic.titech.ac.jp/home/nlp/Repos/outliersvsfreq/paper_plots.ipynb#ch0000002vscode-remote?line=13'>14</a>\u001b[0m         dfs\u001b[39m.\u001b[39mappend(pd\u001b[39m.\u001b[39mDataFrame\u001b[39m.\u001b[39mfrom_dict(json\u001b[39m.\u001b[39mload(input_path))\u001b[39m.\u001b[39mapplymap(select_func)\u001b[39m.\u001b[39mT)\n",
+      "File \u001b[0;32m~/anaconda3/envs/outliersvsfreq/lib/python3.8/pathlib.py:1122\u001b[0m, in \u001b[0;36mPath.iterdir\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1120\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_closed:\n\u001b[1;32m   1121\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_raise_closed()\n\u001b[0;32m-> 1122\u001b[0m \u001b[39mfor\u001b[39;00m name \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_accessor\u001b[39m.\u001b[39;49mlistdir(\u001b[39mself\u001b[39;49m):\n\u001b[1;32m   1123\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m {\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m..\u001b[39m\u001b[39m'\u001b[39m}:\n\u001b[1;32m   1124\u001b[0m         \u001b[39m# Yielding a path object for these makes little sense\u001b[39;00m\n\u001b[1;32m   1125\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/baselines/scores/bert-base-uncased'"
+     ]
     }
    ],
    "source": [
@@ -167,77 +97,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cifar10</th>\n",
+       "      <th>cifar100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>0.97930</td>\n",
+       "      <td>0.90240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>759</th>\n",
+       "      <td>0.98020</td>\n",
+       "      <td>0.91620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>759_187</th>\n",
+       "      <td>0.97650</td>\n",
+       "      <td>0.84020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>random_len_1</th>\n",
+       "      <td>0.98102</td>\n",
+       "      <td>0.91906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>random_len_2</th>\n",
+       "      <td>0.98040</td>\n",
+       "      <td>0.91788</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'759': 0.9802,\n",
-       "  '512': 0.9778,\n",
-       "  '382': 0.9786,\n",
-       "  '637': 0.9802,\n",
-       "  '187': 0.9793,\n",
-       "  '678': 0.9794,\n",
-       "  '759_512': 0.977,\n",
-       "  '759_382': 0.9778,\n",
-       "  '759_637': 0.9788,\n",
-       "  '759_187': 0.9765,\n",
-       "  '759_678': 0.9777,\n",
-       "  '512_382': 0.9751,\n",
-       "  '512_637': 0.975,\n",
-       "  '512_187': 0.9739,\n",
-       "  '512_678': 0.977,\n",
-       "  '382_637': 0.9763,\n",
-       "  '382_187': 0.9764,\n",
-       "  '382_678': 0.9744,\n",
-       "  '637_187': 0.9779,\n",
-       "  '637_678': 0.9768,\n",
-       "  '187_678': 0.9774,\n",
-       "  '': 0.9806,\n",
-       "  '759_512_382_637_187_678': 0.9447,\n",
-       "  'random_len_1': 0.98102,\n",
-       "  'random_len_2': 0.9804,\n",
-       "  'random_len_3': 0.9806800000000001,\n",
-       "  'random_len_4': 0.98026,\n",
-       "  'random_len_5': 0.98074,\n",
-       "  'random_len_6': 0.9803799999999999}]"
+       "              cifar10  cifar100\n",
+       "187           0.97930   0.90240\n",
+       "759           0.98020   0.91620\n",
+       "759_187       0.97650   0.84020\n",
+       "random_len_1  0.98102   0.91906\n",
+       "random_len_2  0.98040   0.91788"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "future_table = []\n",
-    "idxs = ['168', '759', 'random_len_1', ]\n",
-    "for i in ['cifar10']:\n",
-    "    cifar_path = Path(f\"output/vit/{i}\")\n",
+    "idxs = ['187', '759', 'random_len_1', '759_187', 'random_len_2']\n",
+    "for experiment in ['cifar10', 'cifar100']:\n",
+    "    cifar_path = Path(f\"output/vit/{experiment}\")\n",
     "    cifar_result = list(cifar_path.iterdir())[-1]\n",
     "    with open(cifar_result / \"eval_output.json\") as input_file:\n",
-    "        future_table.append(json.load(input_file))\n",
-    "{future_table}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('output/vit/cifar10/trainer_output_nepochs_5_2022-06-24 17:21:16.265822')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(Path(\"./output/vit/cifar10/\").iterdir())[-1]"
+    "        future_table.append(pd.DataFrame.from_dict({experiment:{i:j for i,j in json.load(input_file).items() if i in idxs}}))\n",
+    "pd.concat(future_table, axis=1)"
    ]
   },
   {
